<resources>
    <string name="app_name">TraPick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="SignUp">Sign Up</string>
    <string name="ForgetPass">Forget Your Password?</string>
    <string name="Verify">Verify</string>
    <string name="NotAccount">Don\'t have account?</string>
    <string name="Mobile">Mobile</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="ConfCode">Enter Confirmation Code Here</string>
    <string name="AgreeTerms">Agree to the Terms and Conditions</string>

</resources>
